@startuml
skinparam packageStyle rectangle
    package "fly.domain" {
        package "fly.domain.ports" {
            interface LoggerPort {
                -message: str
                -level: str
                -progress: dict
                -extra: dict
                -worker_id : str
                }

            interface BaseRepositoryPort<T> {
                +save_all(items: List<T>) : void
                +get_all() : List<T>
                +has_item(identifier: str) : bool
                +get_by_id(id: str) : T
                }

            interface CompanyRepositoryPort
                CompanyRepositoryPort --|> BaseRepositoryPort        

            interface NSDRepositoryPort {
                }
                NSDRepositoryPort --|> BaseRepositoryPort

            interface StatementsRepositoryPort {
                }
                StatementsRepositoryPort --|> BaseRepositoryPort
            }

        package "fly.domain.dto" {
            class CompanyDTO {
                +cvm_code: str
                +issuing_company: str
                +trading_name: str
                +company_name: str
                +cnpj: str
                +ticker_codes: str
                +isin_codes: str
                +other_codes: str
                +industry_sector: str
                +industry_subsector: str
                +industry_segment: str
                +industry_classification: str
                +industry_classification_eng: str
                +activity: str
                +company_segment: str
                +company_segment_eng: str
                +company_category: str
                +company_type: str
                +listing_segment: str
                +registrar: str
                +website: str
                +institution_common: str
                +institution_preferred: str
                +market: str
                +status: str
                +market_indicator: str
                +code: str
                +has_bdr: bool
                +type_bdr: str
                +has_quotation: bool
                +has_emissions: bool
                +date_quotation: datetime
                +last_date: datetime
                +listing_date: datetime
                +from_dict(raw: dict) : CompanyDTO
                +from_raw(raw: CompanyRawDTO) : CompanyDTO
                }
                CompanyDTO --> CompanyRawDTO

            class CompanyRawDTO {
                -cvm_code: str
                -issuing_company: str
                -trading_name: str
                -company_name: str
                -cnpj: str
                -ticker_codes: list
                -isin_codes: str
                -other_codes: list
                -industry_sector: str
                -industry_subsector: str
                -industry_segment: str
                -industry_classification: str
                -industry_classification_eng: str
                -activity: str
                -company_segment: str
                -company_segment_eng: str
                -company_category: str
                -company_type: str
                -listing_segment: str
                -registrar: str
                -website: str
                -institution_common: str
                -institution_preferred: str
                -market: str
                -status: str
                -market_indicator: str
                -code: str
                -has_bdr: bool
                -type_bdr: str
                -has_quotation: bool
                -has_emissions: bool
                -date_quotation: datetime
                -last_date: datetime
                -listing_date: datetime
                }

            class NsdDTO {
                +nsd: int
                +company_name: str
                +quarter: datetime
                +version: str
                +nsd_type: str
                +dri: str
                +auditor: str
                +responsible_auditor: str
                +protocol: str
                +sent_date: datetime
                +reason: str
                +from_dict(raw: dict) : NsdDTO
                }
            }
        }
 @enduml